fix: resolve medium and low priority issues
Medium Priority:
- Fix N+1 query problem in getTopicProgress() with single grouped query
- Add database indexes on questions and user_progress tables
- Add proper logging throughout the service
- Add basic unit tests

Low Priority:
- Extract hardcoded strings to AppConstants
- Add Spring Cache for topics
- Add Caffeine cache dependency

Changes:
- Add @Index annotations to Question and UserProgress entities
- Create AppConstants for configuration values
- Create CacheConfig for Spring caching
- Add UserProgressRepository optimized queries
- Update QuestionService with caching and optimized queries
- Update FollowUpRecommender to use constants
- Add basic unit tests for QuestionService